--- a/index.html
+++ b/index.html
@@ -54,30 +54,56 @@
 				<p class="tips">(请点选一个你心仪的音符)</p>
 			</div>
 			<div class="item item1">
-				<div class="tit"></div>
-				<div class="article">
+				<div class="article article1">
+					<div class="tit"></div>
 					<p>你坐在<span>朝西</span>的阳台</p>
 					<p>让寂寞随寒冷的秋风</p>
 					<p>吹乱你的心</p>
 				</div>
+				<div class="light"></div>
+				<div class="note"></div>
 			</div>
 			<div class="item item2">
-				<div class="tit"></div>
-				<div class="article">
+				<div class="article article2">
+					<div class="tit"></div>
 					<p>眼前浮曾经漂泊的身影</p>
 					<p>短暂又漫长的这段人生</p>
 					<p>唯有<span>向前</span></p>
 				</div>
+				<div class="light"></div>
+				<div class="note"></div>
 			</div>
 			<div class="item item3">
-				<div class="tit"></div>
-				<div class="article">
+				<div class="article article3">
+					<div class="tit"></div>
 					<p>回忆好像是一场梦</p>
 					<p>搁浅了太多</p>
 					<p>故事向左你却<span>向右</span></p>
 				</div>
+				<div class="light"></div>
+				<div class="note"></div>
 			</div>
 		</div>
+
+		<!-- 第三页 -->
+		<div id="part_3" class="part part_3">
+			<div class="head_tit">
+				<div class="head_tit_bg"></div>
+			</div>
+			<div class="theme_font"></div>
+			<div class="article">
+				<p>现在，你可以忘记繁琐日常，</p>
+				<p>在专属于你的精神领地里，</p>
+				<p>静静解锁一张<span>私人定制</span>的爱乐之途唱片。</p>
+			</div>
+			<div class="touch_lack">
+				<span class="keys"></span>
+				<span class="line"></span>
+				<span class="lack"></span>
+			</div>
+			<div class="bottom_bg"></div>
+		</div>
+
 	</div>
 	<script type="text/javascript">
 		(function (doc, win) {
