--- a/index.html
+++ b/index.html
@@ -96,10 +96,32 @@
 				<p>在专属于你的精神领地里，</p>
 				<p>静静解锁一张<span>私人定制</span>的爱乐之途唱片。</p>
 			</div>
-			<div class="touch_lack">
-				<span class="keys"></span>
-				<span class="line"></span>
-				<span class="lack"></span>
+			<div class="touch">
+				<div class="touch_lack">
+					<span class="key"></span>
+					<span class="line">
+						<em></em>
+						<em></em>
+						<em></em>
+						<em></em>
+						<em></em>
+						<em></em>
+						<em></em>
+						<em></em>
+						<em></em>
+						<em></em>
+						<em></em>
+						<em></em>
+						<em></em>
+						<em></em>
+						<em></em>
+						<em></em>
+						<em></em>
+					</span>
+					<span class="lack"></span>
+				</div>
+				<div class="touch_tips"></div>
+				<div class="tips">(向右滑动,上传照片)</div>
 			</div>
 			<div class="bottom_bg"></div>
 		</div>
