--- a/index.html
+++ b/index.html
@@ -2,51 +2,60 @@
 <head>
 	<meta charset='utf-8'>
 	<meta name="description" content="华住音乐酒店"/>
-   <meta name="keywords" content="华住音乐酒店"/>
-	<meta name="viewport" content="width=device-width,initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
-	<meta name="x5-orientation" content="portrait">
-	<meta name="x5-fullscreen" content="true">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<link rel="stylesheet" type="text/css" href="css/base.css">
-	<script type="text/javascript" src="js/jquery.min.js"></script>
+   	<meta name="keywords" content="华住音乐酒店"/>
+	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <meta name="screen-orientation" content="portrait">
+    <meta name="x5-orientation" content="portrait">
+    <meta name="format-detection" content="telephone=no"/>
+    <meta name="renderer" content="webkit">
+    <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
+    <meta name="screen-orientation" content="portrait">
+    <meta name="x5-orientation" content="portrait">
+    <meta name="full-screen" content="yes">
+    <meta name="x5-fullscreen" content="true">
+    <meta name="browsermode" content="application">
+    <meta name="x5-page-mode" content="app">
+    <meta name="msapplication-tap-highlight" content="no">
 	<title>华住</title>
+	<link rel="stylesheet" type="text/css" href="css/base.css">
+	<link rel="stylesheet" type="text/css" href="css/animate.css">
+	<script type="text/javascript" src="js/jquery.min.js"></script>
 </head>
 <body>
-	<div class="content">
+	<div id="container" class="content">
 		<!-- 第一页 -->
-		<div id="part_1" class="part part_1">
-			<div class="article article1">
-				<p>穿梭在<span>车水马龙</span>的建筑丛林间，</p>
-				<p>有没有那么<span>一瞬间</span>，</p>
-				<p><span>怀疑自己</span>走错了方向，</p>
-				<p><span>担心</span>被这座城市<span>吞噬</span></p>
-				<p>......</p>
+		<div class="part part_1">
+			<div class="article article1 step step_1">
+				<p class="p1">穿梭在<span>车水马龙</span>的建筑丛林间，</p>
+				<p class="p2">有没有那么<span>一瞬间</span>，</p>
+				<p class="p3"><span>怀疑自己</span>走错了方向，</p>
+				<p class="p4"><span>担心</span>被这座城市<span>吞噬</span></p>
+				<p class="p5">......</p>
 				<div class="light"></div>
 				<div class="note"></div>
 			</div>
 
-			<div class="article article2">
-				<p>这一次，</p>
-				<p>你该<span>用心</span>找寻</p>
-				<p>独一无二的<span>精神领地</span>了</p>
+			<div class="article article2 step step_2">
+				<p class="p1">这一次，</p>
+				<p class="p2">你该<span>用心</span>找寻</p>
+				<p class="p3">独一无二的<span>精神领地</span>了</p>
 				<div class="light light1"></div>
 				<div class="note note1"></div>
 				<div class="light light2"></div>
 				<div class="note note2"></div>
 			</div>
 
-			<div class="article article3">
-				<div class="btn">
-					
-				</div>
-				<p class="comment"></p>
-				<p class="tips">(长按屏幕)</div>
+			<div class="article article3 step step_3">
+				<div id="p1_btn" class="btn scale_btn p1"></div>
+				<p class="comment p2"></p>
+				<p class="tips p3">(长按屏幕)</p>
 			</div>
 
 		</div>
 
 		<!-- 第二页 -->
-		<div id="part_2" class="part part_2">
+		<div class="part part_2 hide">
 			<!-- <p>让手机导航<span>暂时失灵</span>吧，</p>
 			<p><span>别再依赖</span>虚伪的安全感，</p> -->
 			<div class="part_head">
@@ -86,7 +95,7 @@
 		</div>
 
 		<!-- 第三页 -->
-		<div id="part_3" class="part part_3">
+		<div class="part part_3 hide">
 			<div class="head_tit">
 				<div class="head_tit_bg"></div>
 			</div>
@@ -123,13 +132,12 @@
 				<div class="touch_tips"></div>
 				<div class="tips">(向右滑动,上传照片)</div>
 			</div>
-			<div class="bottom_bg"></div>
 		</div>
 
 	</div>
 	<script type="text/javascript">
 		(function (doc, win) {
-        var docEl = doc.documentElement,
+        	var docEl = doc.documentElement,
             size = function () {
                 var clientWidth = docEl.clientWidth;
                 if (!clientWidth) return;
@@ -145,6 +153,6 @@
         doc.addEventListener('DOMContentLoaded', size, false);
     })(document, window);
 	</script>
-	<script type="text/javascript" src="js/index.js"></script>	
+	<script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
