--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <head>
-	<meta charset='utf-8'>
-	<meta name="description" content="华住音乐酒店"/>
-   	<meta name="keywords" content="华住音乐酒店"/>
-	<meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+  <meta charset='utf-8'>
+  <meta name="description" content="华住音乐酒店"/>
+    <meta name="keywords" content="华住音乐酒店"/>
+  <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <meta name="screen-orientation" content="portrait">
     <meta name="x5-orientation" content="portrait">
     <meta name="format-detection" content="telephone=no"/>
@@ -17,127 +17,130 @@
     <meta name="browsermode" content="application">
     <meta name="x5-page-mode" content="app">
     <meta name="msapplication-tap-highlight" content="no">
-	<title>华住</title>
-	<link rel="stylesheet" type="text/css" href="css/base.css">
-	<link rel="stylesheet" type="text/css" href="css/animate.css">
-	<script type="text/javascript" src="js/jquery.min.js"></script>
+  <title>华住</title>
+  <link rel="stylesheet" type="text/css" href="css/base.css">
+  <link rel="stylesheet" type="text/css" href="css/animate.css">
+  <script type="text/javascript" src="js/jquery.min.js"></script>
 </head>
 <body>
-	<div id="container" class="content">
-		<!-- 第一页 -->
-		<div class="part part_1">
-			<div class="article article1 step step_1">
-				<p class="p1">穿梭在<span>车水马龙</span>的建筑丛林间，</p>
-				<p class="p2">有没有那么<span>一瞬间</span>，</p>
-				<p class="p3"><span>怀疑自己</span>走错了方向，</p>
-				<p class="p4"><span>担心</span>被这座城市<span>吞噬</span></p>
-				<p class="p5">......</p>
-				<div class="light"></div>
-				<div class="note"></div>
-			</div>
+  <div id="container" class="content">
+    <!-- 第一页 -->
+    <div class="part part_1 hide">
+      <div class="article article1 step step_1">
+        <p class="p1">穿梭在<span>车水马龙</span>的建筑丛林间，</p>
+        <p class="p2">有没有那么<span>一瞬间</span>，</p>
+        <p class="p3"><span>怀疑自己</span>走错了方向，</p>
+        <p class="p4"><span>担心</span>被这座城市<span>吞噬</span></p>
+        <p class="p5">......</p>
+        <div class="light"></div>
+        <div class="note"></div>
+      </div>
 
-			<div class="article article2 step step_2">
-				<p class="p1">这一次，</p>
-				<p class="p2">你该<span>用心</span>找寻</p>
-				<p class="p3">独一无二的<span>精神领地</span>了</p>
-				<div class="light light1"></div>
-				<div class="note note1"></div>
-				<div class="light light2"></div>
-				<div class="note note2"></div>
-			</div>
+      <div class="article article2 step step_2">
+        <p class="p1">这一次，</p>
+        <p class="p2">你该<span>用心</span>找寻</p>
+        <p class="p3">独一无二的<span>精神领地</span>了</p>
+        <div class="light light1"></div>
+        <div class="note note1"></div>
+        <div class="light light2"></div>
+        <div class="note note2"></div>
+      </div>
 
-			<div class="article article3 step step_3">
-				<div id="p1_btn" class="btn scale_btn p1"></div>
-				<p class="comment p2"></p>
-				<p class="tips p3">(长按屏幕)</p>
-			</div>
+      <div class="article article3 step step_3">
+        <div id="p1_btn" class="btn scale_btn p1"></div>
+        <p class="comment p2"></p>
+        <p class="tips p3">(长按屏幕)</p>
+      </div>
 
-		</div>
+    </div>
 
-		<!-- 第二页 -->
-		<div class="part part_2 hide">
-			<!-- <p>让手机导航<span>暂时失灵</span>吧，</p>
-			<p><span>别再依赖</span>虚伪的安全感，</p> -->
-			<div class="part_head">
-				<h3>哪一个才是你心中的唯一？</h3>
-				<p class="tips">(请点选一个你心仪的音符)</p>
-			</div>
-			<div class="item item1">
-				<div class="article article1">
-					<div class="tit"></div>
-					<p>你坐在<span>朝西</span>的阳台</p>
-					<p>让寂寞随寒冷的秋风</p>
-					<p>吹乱你的心</p>
-				</div>
-				<div class="light"></div>
-				<div class="note"></div>
-			</div>
-			<div class="item item2">
-				<div class="article article2">
-					<div class="tit"></div>
-					<p>眼前浮曾经漂泊的身影</p>
-					<p>短暂又漫长的这段人生</p>
-					<p>唯有<span>向前</span></p>
-				</div>
-				<div class="light"></div>
-				<div class="note"></div>
-			</div>
-			<div class="item item3">
-				<div class="article article3">
-					<div class="tit"></div>
-					<p>回忆好像是一场梦</p>
-					<p>搁浅了太多</p>
-					<p>故事向左你却<span>向右</span></p>
-				</div>
-				<div class="light"></div>
-				<div class="note"></div>
-			</div>
-		</div>
+    <!-- 第二页 -->
+    <div class="part part_2 hide">
+      <!-- <p>让手机导航<span>暂时失灵</span>吧，</p>
+      <p><span>别再依赖</span>虚伪的安全感，</p> -->
+      <div class="part_head">
+        <h3>哪一个才是你心中的唯一？</h3>
+        <p class="tips">(请点选一个你心仪的音符)</p>
+      </div>
+      <div class="item item1">
+        <div class="article article1">
+          <div class="tit"></div>
+          <p>你坐在<span>朝西</span>的阳台</p>
+          <p>让寂寞随寒冷的秋风</p>
+          <p>吹乱你的心</p>
+        </div>
+        <div class="light"></div>
+        <div class="note"></div>
+      </div>
+      <div class="item item2">
+        <div class="article article2">
+          <div class="tit"></div>
+          <p>眼前浮曾经漂泊的身影</p>
+          <p>短暂又漫长的这段人生</p>
+          <p>唯有<span>向前</span></p>
+        </div>
+        <div class="light"></div>
+        <div class="note"></div>
+      </div>
+      <div class="item item3">
+        <div class="article article3">
+          <div class="tit"></div>
+          <p>回忆好像是一场梦</p>
+          <p>搁浅了太多</p>
+          <p>故事向左你却<span>向右</span></p>
+        </div>
+        <div class="light"></div>
+        <div class="note"></div>
+      </div>
+    </div>
 
-		<!-- 第三页 -->
-		<div class="part part_3 hide">
-			<div class="head_tit">
-				<div class="head_tit_bg"></div>
-			</div>
-			<div class="theme_font"></div>
-			<div class="article">
-				<p>现在，你可以忘记繁琐日常，</p>
-				<p>在专属于你的精神领地里，</p>
-				<p>静静解锁一张<span>私人定制</span>的爱乐之途唱片。</p>
-			</div>
-			<div class="touch">
-				<div class="touch_lack">
-					<span class="key"></span>
-					<span class="line">
-						<em></em>
-						<em></em>
-						<em></em>
-						<em></em>
-						<em></em>
-						<em></em>
-						<em></em>
-						<em></em>
-						<em></em>
-						<em></em>
-						<em></em>
-						<em></em>
-						<em></em>
-						<em></em>
-						<em></em>
-						<em></em>
-						<em></em>
-					</span>
-					<span class="lack"></span>
-				</div>
-				<div class="touch_tips"></div>
-				<div class="tips">(向右滑动,上传照片)</div>
-			</div>
-		</div>
+    <!-- 第三页 -->
+    <div class="part part_3 hide">
+      <div class="head_tit">
+        <div class="head_tit_bg"></div>
+      </div>
+      <div class="theme_font"></div>
+      <div class="article">
+        <p>现在，你可以忘记繁琐日常，</p>
+        <p>在专属于你的精神领地里，</p>
+        <p>静静解锁一张<span>私人定制</span>的爱乐之途唱片。</p>
+      </div>
+      <div class="touch">
+        <div class="touch_lack">
+          <span class="key"></span>
+          <span class="line">
+            <em></em>
+            <em></em>
+            <em></em>
+            <em></em>
+            <em></em>
+            <em></em>
+            <em></em>
+            <em></em>
+            <em></em>
+            <em></em>
+            <em></em>
+            <em></em>
+            <em></em>
+            <em></em>
+            <em></em>
+            <em></em>
+            <em></em>
+          </span>
+          <span class="lack"></span>
+        </div>
+        <div class="touch_tips"></div>
+        <div class="tips">(向右滑动,上传照片)</div>
+      </div>
+    </div>
+  <!-- 测试虾米音乐页 -->
+  <div class="part xiami">
 
-	</div>
-	<script type="text/javascript">
-		(function (doc, win) {
-        	var docEl = doc.documentElement,
+  </div>
+  </div>
+  <script type="text/javascript">
+    (function (doc, win) {
+          var docEl = doc.documentElement,
             size = function () {
                 var clientWidth = docEl.clientWidth;
                 if (!clientWidth) return;
@@ -152,7 +155,8 @@
         win.addEventListener('resize', size, false);
         doc.addEventListener('DOMContentLoaded', size, false);
     })(document, window);
-	</script>
-	<script type="text/javascript" src="js/index.js"></script>
+  </script>
+  <script type="text/javascript" src="js/index.js"></script>
+  <script type="text/javascript" src="js/xiami_music.js"></script>
 </body>
 </html>
