--- a/index.html
+++ b/index.html
@@ -32,18 +32,18 @@
 				<p class="p3"><span>怀疑自己</span>走错了方向，</p>
 				<p class="p4"><span>担心</span>被这座城市<span>吞噬</span></p>
 				<p class="p5">......</p>
-				<div class="light"></div>
-				<div class="note"></div>
+				<div class="light opacity_light1"></div>
+				<div class="note opacity_note1"></div>
 			</div>
 
 			<div class="article article2 step step_2">
 				<p class="p1">这一次，</p>
 				<p class="p2">你该<span>用心</span>找寻</p>
 				<p class="p3">独一无二的<span>精神领地</span>了</p>
-				<div class="light light1"></div>
-				<div class="note note1"></div>
-				<div class="light light2"></div>
-				<div class="note note2"></div>
+				<div class="light light1 opacity_light2"></div>
+				<div class="note note1 opacity_note2"></div>
+				<div class="light light2 opacity_light3"></div>
+				<div class="note note2 opacity_note3"></div>
 			</div>
 
 			<div class="article article3 step step_3">
@@ -96,11 +96,30 @@
 
 		<!-- 第三页 -->
 		<div class="part part_3 hide">
-			<div class="head_tit">
-				<div class="head_tit_bg"></div>
+			<div class="head_bg head_bg1 hide">
+				<div class="article">
+					<p>脚步轻盈，梦幻汇聚</p>
+					<p>尽在杭州<span>CitiGo</span></p>
+				</div>
 			</div>
+			<div class="head_bg head_bg2 hide">
+				<div class="article">
+					<p>摇滚的哲学</p>
+					<p>尽在北京三里屯</p>
+					<p><span>汉庭</span></p>
+				</div>
+			</div>
+			<div class="head_bg head_bg3 hide">
+				<div class="article">
+					<p>Freestyle的态度</p>
+					<p>尽在西安<span>漫心</span></p>
+				</div>
+			</div>			
+			<!-- <div class="head_tit">
+				<div class="head_tit_bg"></div>
+			</div> -->
 			<div class="theme_font"></div>
-			<div class="article">
+			<div class="article theme_p">
 				<p>现在，你可以忘记繁琐日常，</p>
 				<p>在专属于你的精神领地里，</p>
 				<p>静静解锁一张<span>私人定制</span>的爱乐之途唱片。</p>
