--- a/index.html
+++ b/index.html
@@ -120,13 +120,13 @@
 			</div> -->
 			<div class="theme_font"></div>
 			<div class="article theme_p">
-				<p>现在，你可以忘记繁琐日常，</p>
-				<p>在专属于你的精神领地里，</p>
-				<p>静静解锁一张<span>私人定制</span>的爱乐之途唱片。</p>
+				<p class="p1">现在，你可以忘记繁琐日常，</p>
+				<p class="p2">在专属于你的精神领地里，</p>
+				<p class="p3">静静解锁一张<span>私人定制</span>的爱乐之途唱片。</p>
 			</div>
 			<div class="touch">
 				<div class="touch_lack">
-					<span class="key"></span>
+					<span class="key" id="key"></span>
 					<span class="line">
 						<em></em>
 						<em></em>
