--- a/index.html
+++ b/index.html
@@ -134,8 +134,11 @@
       </div>
     </div>
   <!-- 测试虾米音乐页 -->
-  <div class="part xiami">
+  <div class="part xiami hide">
 
+  </div>
+  <div>
+    <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="310" height="430" src="//h.xiami.com/embed-player.html?type=song&id=1771352003&auto=0&res=310x430&theme=light"></iframe>
   </div>
   </div>
   <script type="text/javascript">
