--- a/index.html
+++ b/index.html
@@ -137,8 +137,12 @@
   <div class="part xiami hide">
 
   </div>
+  <div class="poster">
+    <input type="file" id="file">
+    <canvas id="canvas"></canvas>
+  </div>
   <div>
-    <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="310" height="430" src="//h.xiami.com/embed-player.html?type=song&id=1771352003&auto=0&res=310x430&theme=light"></iframe>
+<!--     <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="310" height="430" src="//h.xiami.com/embed-player.html?type=song&id=1771352003&auto=0&res=310x430&theme=light"></iframe> -->
   </div>
   </div>
   <script type="text/javascript">
@@ -158,8 +162,16 @@
         win.addEventListener('resize', size, false);
         doc.addEventListener('DOMContentLoaded', size, false);
     })(document, window);
+    function remToPx (rem){
+      return parseInt(rem / 750*document.documentElement.clientWidth*100);
+    }
+    function pxToRem(px){
+       return parseFloat(px * 750/document.documentElement.clientWidth/100);
+     }
   </script>
+  <script type="text/javascript" src="js/config.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
   <script type="text/javascript" src="js/xiami_music.js"></script>
+  <script type="text/javascript" src="js/poster.js"></script>
 </body>
 </html>
