--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@
 			</div>
 
 			<div class="article article3 step step_3">
-				<div id="p1_btn" class="btn scale_btn p1"></div>
+				<div class="p1_btn_3 p1_btn p1 scale_btn3"></div>
+				<div class="p1_btn_2 p1_btn scale_btn2 p1"></div>
+				<div id="p1_btn" class="p1_btn_1 p1_btn p1"></div>
 				<p class="comment p2"></p>
 				<p class="tips p3">(长按屏幕)</p>
 			</div>
-
 		</div>
 
 		<!-- 第二页 -->
