--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	<link rel="stylesheet" type="text/css" href="css/base.css">
 	<link rel="stylesheet" type="text/css" href="css/animate.css">
 	<script type="text/javascript" src="js/jquery.min.js"></script>
+	<script type="text/javascript" src="js/parallax.js"></script>
 </head>
 <body>
 	<div id="container" class="content">
@@ -96,29 +97,29 @@
 		</div>
 
 		<!-- 第三页 -->
-		<div class="part part_3 hide">
-			<div class="head_bg head_bg1 hide">
+		<div class="part part_3 hide" id="scene">
+			<div class="layer layer1 head_bg head_bg1 hide" data-scalar-x='30.0' data-scalar-y='30.0'>
+				<img src="img/citigo.png">
 				<div class="article">
 					<p>脚步轻盈，梦幻汇聚</p>
 					<p>尽在杭州<span>CitiGo</span></p>
 				</div>
 			</div>
-			<div class="head_bg head_bg2 hide">
+			<div class="layer layer2 head_bg head_bg2 hide" data-scalar-x='30.0' data-scalar-y='30.0'>
+				<img src="img/hanting.png">
 				<div class="article">
 					<p>摇滚的哲学</p>
 					<p>尽在北京三里屯</p>
 					<p><span>汉庭</span></p>
 				</div>
 			</div>
-			<div class="head_bg head_bg3 hide">
+			<div class="layer layer3 head_bg head_bg3 hide" data-scalar-x='30.0' data-scalar-y='30.0'>
+				<img src="img/manxin.png">
 				<div class="article">
 					<p>Freestyle的态度</p>
 					<p>尽在西安<span>漫心</span></p>
 				</div>
-			</div>			
-			<!-- <div class="head_tit">
-				<div class="head_tit_bg"></div>
-			</div> -->
+			</div>
 			<div class="theme_font"></div>
 			<div class="article theme_p">
 				<p class="p1">现在，你可以忘记繁琐日常，</p>
