修改目录结构

--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
   <title>华住</title>
   <link rel="stylesheet" type="text/css" href="css/base.css">
   <link rel="stylesheet" type="text/css" href="css/animate.css">
-  <script type="text/javascript" src="js/jquery.min.js"></script>
-  <script type="text/javascript" src="js/parallax.js"></script>
 </head>
 <body>
   <div id="container" class="content">
@@ -191,10 +189,13 @@
        return parseFloat(px * 750/document.documentElement.clientWidth/100);
      }
   </script>
-  <script type="text/javascript" src="js/jquery.min.js"></script>
   <script type="text/javascript" src="js/config.js"></script>
+  <script type="text/javascript" src="js/libs/jquery.min.js"></script>
+  <script type="text/javascript" src="js/libs/parallax.js"></script>
+  <script type="text/javascript" src="js/libs/md5.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
   <script type="text/javascript" src="js/xiami_music.js"></script>
   <script type="text/javascript" src="js/poster.js"></script>
+  <script type="text/javascript" src="js/api.js"></script>
 </body>
 </html>
