--- a/index.html
+++ b/index.html
@@ -96,24 +96,24 @@
 
     <!-- 第三页 -->
     <div class="part part_3 hide" id="scene">
-      <div class="layer layer1 head_bg head_bg1 hide" data-scalar-x='30.0' data-scalar-y='30.0'>
-        <img src="img/citigo.png">
-        <div class="article">
+      <div class="layer layer_1 head_bg head_bg1 hide" data-scalar-x='30.0' data-scalar-y='30.0'>
+        <img data-depth="0.15" src="img/citigo.png">
+        <div data-depth="0.00" class="article">
           <p>脚步轻盈，梦幻汇聚</p>
           <p>尽在杭州<span>CitiGo</span></p>
         </div>
       </div>
-      <div class="layer layer2 head_bg head_bg2 hide" data-scalar-x='30.0' data-scalar-y='30.0'>
-        <img src="img/hanting.png">
-        <div class="article">
+      <div class="layer layer_2 head_bg head_bg2 hide" data-scalar-x='30.0' data-scalar-y='30.0'>
+        <img data-depth="0.15" src="img/hanting.png">
+        <div data-depth="0.00" class="article">
           <p>摇滚的哲学</p>
           <p>尽在北京三里屯</p>
           <p><span>汉庭</span></p>
         </div>
       </div>
-      <div class="layer layer3 head_bg head_bg3 hide" data-scalar-x='30.0' data-scalar-y='30.0'>
-        <img src="img/manxin.png">
-        <div class="article">
+      <div class="layer layer_3 head_bg head_bg3 hide" data-scalar-x='30.0' data-scalar-y='30.0'>
+        <img data-depth="0.15" src="img/manxin.png">
+        <div data-depth="0.00" class="article">
           <p>Freestyle的态度</p>
           <p>尽在西安<span>漫心</span></p>
         </div>
