--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
         <p class="comment p2"></p>
         <p class="tips p3">(长按屏幕)</p>
       </div>
+      <div class="line_bg bg amt_bg1"></div>
+      <div class="note_bg bg amt_bg2"></div>
+      <div class="pillow_bg bg amt_bg3"></div>
     </div>
     <!-- 第二页 -->
     <div class="part part_2 hide">
@@ -151,6 +154,9 @@
         <div class="touch_tips"></div>
         <div class="tips">(向右滑动,上传照片)</div>
       </div>
+      <div class="line_bg bg"></div>
+      <div class="note_bg bg"></div>
+      <div class="pillow_bg bg"></div>
     </div>
 
   <!-- 测试虾米音乐页 -->
