--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
   <div id="container" class="content">
     <!-- 第一页 -->
-    <div class="part part_1">
+    <div class="part part_1 hide">
       <div class="article article1 step step_1">
         <p class="p1">穿梭在<span>车水马龙</span>的建筑丛林间，</p>
         <p class="p2">有没有那么<span>一瞬间</span>，</p>
@@ -163,9 +163,25 @@
   <div class="part xiami hide">
 
   </div>
-  <div class="poster">
+  <div class="part clip">
     <input type="file" id="file">
-    <canvas id="canvas"></canvas>
+    <div class="view"></div>
+    <div class="clipBtn">确认截取</div>
+  </div>
+  <div class="part poster hide">
+    <div class="will_hide">
+      <div class="title">长按图片保存歌单</div>
+      <div class="html2canvas">
+        <img class="bg" src="">
+        <img class="layer" src="img/layer/1.png">
+      </div>
+      <div class="btn_group">
+        <div class="btn change_bg" style="margin-left:0.72rem" onclick="changePic()">更换照片</div>
+        <div class="btn change_layer" style="margin-left:.3rem">调整态度</div>
+      </div>
+      <div class="hint"></div>
+    </div>
+    <img class="final" src="">
   </div>
   <div>
 <!--     <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="310" height="430" src="//h.xiami.com/embed-player.html?type=song&id=1771352003&auto=0&res=310x430&theme=light"></iframe> -->
@@ -192,13 +208,19 @@
       return parseInt(rem / 750*document.documentElement.clientWidth*100);
     }
     function pxToRem(px){
-       return parseFloat(px * 750/document.documentElement.clientWidth/100);
-     }
+      return parseFloat(px * 750/document.documentElement.clientWidth/100);
+    }
   </script>
   <script type="text/javascript" src="js/config.js"></script>
   <script type="text/javascript" src="js/libs/jquery.min.js"></script>
   <script type="text/javascript" src="js/libs/parallax.js"></script>
   <script type="text/javascript" src="js/libs/md5.js"></script>
+  <script type="text/javascript" src="js/libs/hammer.min.js"></script>
+  <script type="text/javascript" src="js/libs/iscroll-zoom-min.js"></script>
+  <script type="text/javascript" src="js/libs/lrz.all.bundle.js"></script>
+  <script type="text/javascript" src="js/libs/Photoclip.js"></script>
+  <script type="text/javascript" src="js/libs/html2canvas.js"></script>
+  <script type="text/javascript" src="js/libs/maskword.js"></script>
   <script type="text/javascript" src="js/index.js"></script>
   <script type="text/javascript" src="js/xiami_music.js"></script>
   <script type="text/javascript" src="js/poster.js"></script>
