--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
   <div id="container" class="content">
     <!-- 第一页 -->
-    <div class="part part_1 hide">
+    <div class="part part_1">
       <div class="article article1 step step_1">
         <p class="p1">穿梭在<span>车水马龙</span>的建筑丛林间，</p>
         <p class="p2">有没有那么<span>一瞬间</span>，</p>
@@ -57,7 +57,7 @@
       <div class="pillow_bg bg amt_bg3"></div>
     </div>
     <!-- 第二页 -->
-    <div class="part part_2 hide">
+    <div class="part part_2">
       <!-- <p>让手机导航<span>暂时失灵</span>吧，</p>
       <p><span>别再依赖</span>虚伪的安全感，</p> -->
       <div class="part_head">
@@ -98,7 +98,7 @@
 
 
     <!-- 第三页 -->
-    <div class="part part_3 hide" id="scene">
+    <div class="part part_3" id="scene">
       <div class="layer layer_1 head_bg head_bg1 hide" data-scalar-x='30.0' data-scalar-y='30.0'>
         <img data-depth="0.15" src="img/citigo.png">
         <div data-depth="0.00" class="article">
@@ -160,10 +160,10 @@
     </div>
 
   <!-- 测试虾米音乐页 -->
-  <div class="part xiami hide">
+<!--   <div class="part xiami">
 
-  </div>
-  <div class="part clip">
+  </div> -->
+  <div class="part clip hide">
     <input type="file" id="file">
     <div class="view"></div>
     <div class="clipBtn">确认截取</div>
