完成所有接口，登录，上传照片接口已调通

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <body>
   <div id="container" class="content">
     <!-- 第一页 -->
-    <div class="part part_1">
+    <div class="part part_1 hide">
       <div class="article article1 step step_1">
         <p class="p1">穿梭在<span>车水马龙</span>的建筑丛林间，</p>
         <p class="p2">有没有那么<span>一瞬间</span>，</p>
@@ -57,7 +57,7 @@
       <div class="pillow_bg bg amt_bg3"></div>
     </div>
     <!-- 第二页 -->
-    <div class="part part_2">
+    <div class="part part_2 hide">
       <!-- <p>让手机导航<span>暂时失灵</span>吧，</p>
       <p><span>别再依赖</span>虚伪的安全感，</p> -->
       <div class="part_head">
@@ -98,7 +98,7 @@
 
 
     <!-- 第三页 -->
-    <div class="part part_3" id="scene">
+    <div class="part part_3 hide" id="scene">
       <div class="layer layer_1 head_bg head_bg1 hide" data-scalar-x='30.0' data-scalar-y='30.0'>
         <img data-depth="0.15" src="img/citigo.png">
         <div data-depth="0.00" class="article">
@@ -163,7 +163,7 @@
 <!--   <div class="part xiami">
 
   </div> -->
-  <div class="part clip hide">
+  <div class="part clip">
     <input type="file" id="file">
     <div class="view"></div>
     <div class="clipBtn">确认截取</div>
@@ -178,6 +178,7 @@
       <div class="btn_group">
         <div class="btn change_bg" style="margin-left:0.72rem" onclick="changePic()">更换照片</div>
         <div class="btn change_layer" style="margin-left:.3rem">调整态度</div>
+        <div class="submit"></div>
       </div>
       <div class="hint"></div>
     </div>
