--- a/shake.html
+++ b/shake.html
@@ -3,15 +3,55 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>摇一摇</title>
+	<link rel="stylesheet" type="text/css" href="css/base.css">
 	<link rel="stylesheet" type="text/css" href="css/shake.css">
 </head>
 <body>
-	<div class="shake_page">
-		
+	<div class="shake_page content part">
+		<div class="line_bg bg"></div>
+    <div class="note_bg bg"></div>
+    <div class="pillow_bg bg"></div>
+    <div class="shake_p1 hide">
+    	<div class="font bg"></div>
+	    <div class="tip bg"></div>
+	    <div class="shake bg"></div>
+    </div>
+    <div class="shake_p2">
+			<div class="result_font bg"></div>
+			<div class="volume bg"></div>
+			<div class="sheet bg"></div>
+			<div class="btn bg"></div>
+			<div class="article">
+				<div class="tit"><em class="icon_note bg"></em></div>
+				<p>用你的音乐基因，</p>
+				<p>打开这份</p>
+				<p>华住会音乐酒店见面礼</p>
+				<p class="mt">上传照片，</p>
+				<p>解锁你的音乐基因！</p>
+			</div>
+    </div>
 	</div>
+<script type="text/javascript" src="js/libs/jquery.min.js"></script>
 <script type="text/javascript">
+	(function (doc, win) {
+    var docEl = doc.documentElement,
+      size = function () {
+          var clientWidth = docEl.clientWidth;
+          if (!clientWidth) return;
+          if(clientWidth>=750){
+              docEl.style.fontSize = '100px';
+          }else{
+              docEl.style.fontSize = 100 * (clientWidth / 750) + 'px';
+          }
+      };
+
+    if (!doc.addEventListener) return;
+    win.addEventListener('resize', size, false);
+    doc.addEventListener('DOMContentLoaded', size, false);
+  })(document, window);
+
 	$(function(){
 		if (window.DeviceMotionEvent) {
     	window.addEventListener('devicemotion', shakeEventHandler, false);
