--- a/darre.html
+++ b/darre.html
@@ -24,6 +24,7 @@
 <body>
 	<div id="topContainer">
         <div class="music_icon">
+            <div class="how"><img src="img/darre/darre_how_19.png" alt=""></div>
             <div class="logo"><img src="img/darre/darre_logo_03.png" alt=""></div>
             <div class="darreImg"><img src="img/darre/darre_img_03.png" alt=""></div>
             <div class="desc"><img src="img/darre/darre_desc_07.png" alt=""></div>
@@ -31,24 +32,52 @@
             <div class="add"><img src="img/darre/darre_add_14.png"></div>
             <div class="darre_icon_1"><img src="img/darre/darre_icon_1_03.png" alt=""></div>
             <div class="darre_icon_2"><img src="img/darre/darre_icon_2_06.png" alt=""></div>
-
-
-
-
-
             <div class="top_list">
                 <ul>
                     <li>
                         <span class="icon"><img src="img/darre/darre_music_name_19.png" alt="">
-                        </span><span>唱片名
-                        </span><span class="star"><img src="img/darre/darre_star" alt="">
-                        </span>
+                        </span><span class="record_name">唱片名
+                        </span><span class="star"><img src="img/darre/darre_music_star_22.png" alt="">72
+                        </span><span class="play"><img src="img/darre/darre_music_play_19.png" alt=""></span>
+                    </li>
+                    <li>
+                        <span class="icon"><img src="img/darre/darre_music_name_19.png" alt="">
+                        </span><span class="record_name">唱片名
+                        </span><span class="star"><img src="img/darre/darre_music_star_22.png" alt="">72
+                        </span><span class="play"><img src="img/darre/darre_music_play_19.png" alt=""></span>
+                    </li>
+                    <li>
+                        <span class="icon"><img src="img/darre/darre_music_name_19.png" alt="">
+                        </span><span class="record_name">唱片名
+                        </span><span class="star"><img src="img/darre/darre_music_star_22.png" alt="">72
+                        </span><span class="play"><img src="img/darre/darre_music_play_19.png" alt=""></span>
+                    </li>
+                    <li>
+                        <span class="icon"><img src="img/darre/darre_music_name_19.png" alt="">
+                        </span><span class="record_name">唱片名
+                        </span><span class="star"><img src="img/darre/darre_music_star_22.png" alt="">72
+                        </span><span class="play"><img src="img/darre/darre_music_play_19.png" alt=""></span>
+                    </li>
+                    <li>
+                        <span class="icon"><img src="img/darre/darre_music_name_19.png" alt="">
+                        </span><span class="record_name">唱片名
+                        </span><span class="star"><img src="img/darre/darre_music_star_22.png" alt="">72
+                        </span><span class="play"><img src="img/darre/darre_music_play_19.png" alt=""></span>
+                    </li>
+                    <li>
+                        <span class="icon"><img src="img/darre/darre_music_name_19.png" alt="">
+                        </span><span class="record_name">唱片名
+                        </span><span class="star"><img src="img/darre/darre_music_star_22.png" alt="">72
+                        </span><span class="play"><img src="img/darre/darre_music_play_19.png" alt=""></span>
                     </li>
                 </ul>
             </div>
-
-
-
+        </div>
+        <div class="darre_btn_1">
+            <img src="img/darre/darre_btn_1_03.png" alt="">
+        </div>
+        <div class="darre_btn_2">
+            <img src="img/darre/darre_btn_2_03.png" alt="">
         </div>
 	</div>
 	<script type="text/javascript">
