--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
   <title>华住</title>
   <link rel="stylesheet" type="text/css" href="css/base.css">
   <link rel="stylesheet" type="text/css" href="css/animate.css">
+  <link rel="stylesheet" type="text/css" href="css/darre.css">
 </head>
 <body>
   <div id="container" class="content">
     <!-- 第一页 -->
-    <div class="part part_1 hide">
+    <div class="part part_1" hide>
       <div class="article article1 step step_1">
         <p class="p1">穿梭在<span>车水马龙</span>的建筑丛林间，</p>
         <p class="p2">有没有那么<span>一瞬间</span>，</p>
@@ -163,7 +164,7 @@
 <!--   <div class="part xiami">
 
   </div> -->
-  <div class="part clip">
+  <div class="part clip hide">
     <input type="file" id="file">
     <div class="view"></div>
     <div class="clipBtn">确认截取</div>
@@ -184,6 +185,60 @@
     </div>
     <img class="final" src="">
   </div>
+  <div class="part hide infoContainer" id="infoContainer">
+    <div class="info_thing">
+      <div class="music_icon">
+        <img src="img/darre/music_icon_03.png" alt="">
+      </div>
+      <div class="info_title"><img src="img/darre/info_title_03.png" alt=""></div>
+      <div class="info_small_title"><img src="img/darre/info_smalltitle_03.png" alt=""></div>
+      <div class="info_msg"><img src="img/darre/info_msg_03.png" alt=""></div>
+      <div class="darre_form">
+        <ul>
+          <li>
+            <div class="left"><img src="img/darre/ingo_name_03.png" alt=""></div>
+            <!--<div class="right"><img src="img/darre/info_input_03.jpg" alt=""></div>-->
+            <div class="right"><input type="text" class="darre_input" id="name" maxlength="8"></div>
+          </li>
+          <li style="margin-top:0.4rem">
+            <div class="left"><img src="img/darre/need_mobile_03.png" alt=""></div>
+            <!--<div class="right"><img src="img/darre/info_input_03.jpg" alt=""></div>-->
+            <div class="right"><input type="text" class="darre_input" id="mobile" maxlength="11"></div>
+          </li>
+          <li style="margin-top:0.4rem">
+            <div class="left"><img src="img/darre/need_recoed_name_03.png" alt=""></div>
+            <!--<div class="right"><img src="img/darre/info_input_03.jpg" alt=""></div>-->
+            <div class="right"><input type="text" class="darre_input" id="record_name" maxlength="12"></div>
+          </li>
+        </ul>
+      </div>
+      <div class="btn_confirm" style="margin-top: 0.4rem  ;"><img src="img/darre/info_confirm_03.png" alt=""></div>
+      <div class="btn_cancel"><img src="img/darre/info_cancel_07.png" alt=""></div>
+      <div class="btn_gobang"><img src="img/darre/info_gobang_11.png" alt=""></div>
+    </div>
+  </div>
+    <div id="topContainer" class="page topContainer hide">
+      <div class="music_icon">
+        <div class="how"><img src="img/darre/darre_how_19.png" alt=""></div>
+        <div class="logo"><img src="img/darre/darre_logo_03.png" alt=""></div>
+        <div class="darreImg"><img src="img/darre/darre_img_03.png" alt=""></div>
+        <div class="desc"><img src="img/darre/darre_desc_07.png" alt=""></div>
+        <div class="top6"><img src="img/darre/darre_top6_11.png" alt=""></div>
+        <div class="add"><img src="img/darre/darre_add_14.png"></div>
+        <div class="darre_icon_1"><img src="img/darre/darre_icon_1_03.png" alt=""></div>
+        <div class="darre_icon_2"><img src="img/darre/darre_icon_2_06.png" alt=""></div>
+        <div class="top_list">
+          <ul></ul>
+        </div>
+      </div>
+      <div class="darre_btn_1">
+        <img src="img/darre/darre_btn_1_03.png" alt="">
+      </div>
+      <div class="darre_btn_2">
+        <img src="img/darre/darre_btn_2_03.png" alt="">
+      </div>
+      <div class="help hide"></div>
+    </div>
   <div>
 <!--     <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="310" height="430" src="//h.xiami.com/embed-player.html?type=song&id=1771352003&auto=0&res=310x430&theme=light"></iframe> -->
   </div>
