update shake page

--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
   <link rel="stylesheet" type="text/css" href="css/base.css">
   <link rel="stylesheet" type="text/css" href="css/animate.css">
   <link rel="stylesheet" type="text/css" href="css/darre.css">
+  <link rel="stylesheet" type="text/css" href="css/shake.css">
 </head>
 <body>
   <div id="container" class="content">
     <!-- 第一页 -->
-    <div class="part part_1" hide>
+    <div class="part part_1 hide">
       <div class="article article1 step step_1">
         <p class="p1">穿梭在<span>车水马龙</span>的建筑丛林间，</p>
         <p class="p2">有没有那么<span>一瞬间</span>，</p>
@@ -159,7 +160,6 @@
       <div class="note_bg bg"></div>
       <div class="pillow_bg bg"></div>
     </div>
-
   <!-- 测试虾米音乐页 -->
 <!--   <div class="part xiami">
 
@@ -217,32 +217,55 @@
       <div class="btn_gobang"><img src="img/darre/info_gobang_11.png" alt=""></div>
     </div>
   </div>
-    <div id="topContainer" class="page topContainer hide">
-      <div class="music_icon">
-        <div class="how"><img src="img/darre/darre_how_19.png" alt=""></div>
-        <div class="logo"><img src="img/darre/darre_logo_03.png" alt=""></div>
-        <div class="darreImg"><img src="img/darre/darre_img_03.png" alt=""></div>
-        <div class="desc"><img src="img/darre/darre_desc_07.png" alt=""></div>
-        <div class="top6"><img src="img/darre/darre_top6_11.png" alt=""></div>
-        <div class="add"><img src="img/darre/darre_add_14.png"></div>
-        <div class="darre_icon_1"><img src="img/darre/darre_icon_1_03.png" alt=""></div>
-        <div class="darre_icon_2"><img src="img/darre/darre_icon_2_06.png" alt=""></div>
-        <div class="top_list">
-          <ul></ul>
-        </div>
+  <div id="topContainer" class="page topContainer hide">
+    <div class="music_icon">
+      <div class="how"><img src="img/darre/darre_how_19.png" alt=""></div>
+      <div class="logo"><img src="img/darre/darre_logo_03.png" alt=""></div>
+      <div class="darreImg"><img src="img/darre/darre_img_03.png" alt=""></div>
+      <div class="desc"><img src="img/darre/darre_desc_07.png" alt=""></div>
+      <div class="top6"><img src="img/darre/darre_top6_11.png" alt=""></div>
+      <div class="add"><img src="img/darre/darre_add_14.png"></div>
+      <div class="darre_icon_1"><img src="img/darre/darre_icon_1_03.png" alt=""></div>
+      <div class="darre_icon_2"><img src="img/darre/darre_icon_2_06.png" alt=""></div>
+      <div class="top_list">
+        <ul></ul>
       </div>
-      <div class="darre_btn_1">
-        <img src="img/darre/darre_btn_1_03.png" alt="">
-      </div>
-      <div class="darre_btn_2">
-        <img src="img/darre/darre_btn_2_03.png" alt="">
-      </div>
-      <div class="help hide"></div>
     </div>
+    <div class="darre_btn_1">
+      <img src="img/darre/darre_btn_1_03.png" alt="">
+    </div>
+    <div class="darre_btn_2">
+      <img src="img/darre/darre_btn_2_03.png" alt="">
+    </div>
+    <div class="help hide"></div>
+  </div>
+  <div class="part shake_page">
+    <div class="line_bg bg"></div>
+    <div class="note_bg bg"></div>
+    <div class="pillow_bg bg"></div>
+    <div class="shake_p1">
+      <div class="font bg"></div>
+      <div class="tip bg"></div>
+      <div class="shake bg"></div>
+    </div>
+    <div class="shake_p2 hide">
+    <div class="result_font bg"></div>
+    <div class="volume bg"></div>
+    <div class="sheet bg"></div>
+    <div class="btn bg" id="shake_btn"></div>
+    <div class="article">
+      <div class="tit"><em class="icon_note bg"></em></div>
+      <p class="p1">用你的音乐基因，</p>
+      <p class="p2">打开这份</p>
+      <p class="p3">华住会音乐酒店见面礼</p>
+      <p class="mt p4">上传照片，</p>
+      <p class="p5">解锁你的音乐基因！</p>
+    </div>
+  </div>
   <div>
 <!--     <iframe frameborder="no" border="0" marginwidth="0" marginheight="0" width="310" height="430" src="//h.xiami.com/embed-player.html?type=song&id=1771352003&auto=0&res=310x430&theme=light"></iframe> -->
   </div>
-  </div>
+</div>
   <script type="text/javascript">
     (function (doc, win) {
           var docEl = doc.documentElement,
