--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
   <div id="container" class="content">
     <!-- 第一页 -->
-    <div class="part part_1 hide">
+    <div class="part part_1">
       <div class="article article1 step step_1">
         <p class="p1">穿梭在<span>车水马龙</span>的建筑丛林间，</p>
         <p class="p2">有没有那么<span>一瞬间</span>，</p>
