--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
   <div id="container" class="content">
     <!-- 第一页 -->
-    <div class="part part_1">
+    <div class="part part_1 hide">
       <div class="article article1 step step_1">
         <p class="p1">穿梭在<span>车水马龙</span>的建筑丛林间，</p>
         <p class="p2">有没有那么<span>一瞬间</span>，</p>
@@ -244,9 +244,15 @@
     <div class="note_bg bg"></div>
     <div class="pillow_bg bg"></div>
     <div class="shake_p1">
-      <div class="font bg"></div>
-      <div class="tip bg"></div>
-      <div class="shake bg"></div>
+      <div class="font bg">
+        <!-- <img src="img/shake/shake_font.png"> -->
+      </div>
+      <div class="tip bg">
+        <!-- <img src="img/shake/shake_tip.png"> -->
+      </div>
+      <div class="shake bg">
+        <!-- <img src="img/shake/shake.png"> -->
+      </div>
     </div>
     <div class="shake_p2 hide">
     <div class="result_font bg"></div>
