--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
   <div id="container" class="content">
     <!-- 第一页 -->
-    <div class="part part_1 hide">
+    <div class="part part_1">
       <div class="article article1 step step_1">
         <p class="p1">穿梭在<span>车水马龙</span>的建筑丛林间，</p>
         <p class="p2">有没有那么<span>一瞬间</span>，</p>
@@ -239,7 +239,7 @@
     </div>
     <div class="help hide"></div>
   </div>
-  <div class="part shake_page">
+  <div class="part shake_page hide">
     <div class="line_bg bg"></div>
     <div class="note_bg bg"></div>
     <div class="pillow_bg bg"></div>
