--- a/redirect.html
+++ b/redirect.html
@@ -38,9 +38,9 @@ if(f=='hotel'){
   base_url = encodeURIComponent(Config.WEB_URL);
 }
 redirect_url = redirect_url.replace('[REDIRECT_URL]',base_url);
-console.log(redirect_url);
+// console.log(redirect_url);
 
-// window.location.href=redirect_url
+window.location.href=redirect_url
 </script>
 </body>
 </html>
